# RayTracerCPU

./: .gitignore  CMakeLists.txt
RayTracingInOneWeekend/1_A/: CMakeLists.txt
RayTracingInOneWeekend/2_B/: CMakeLists.txt
RayTracingInOneWeekend/2_B/src/: main.cpp
